--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<title>Memory Card</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;300;400;500;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-		<link rel="shortcut icon" href="#">
+		<link rel="shortcut icon" href="/src/assets/combine_logo.png">
 	</head>
 	<body>
 		<div id="root"></div>
